<resources>
    <string name="app_name">SPNapplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- fragment_recent_records.xml -->
    <string name="recent_records_sticky_header_date">xxxx년 x월 xx일</string>
    <string name="recent_records_item_content_name">이름</string>
    <string name="recent_records_item_content_time">오전 3:46</string>
    <string name="recent_records_title">최근기록</string>

    <!-- fragment_contact.xml -->
    <string name="contact_appIcon">SPN</string>
    <string name="contact_username">이름</string>
    <string name="contact_usernameTitleGa">ㄱ</string>
    <string name="contact_detail_name">이름</string>
    <string name="contact_detail_send_message">메시지보내기</string>
    <string name="contact_detail_make_call">전화하기</string>
    <string name="contact_detail_phone_number_title">전화번호</string>
    <string name="contact_detail_phone_number">010-1111-2222</string>
    <string name="contact_detail_email_title">이메일</string>
    <string name="contact_detail_email">hoho33@gamil.com</string>
    <string name="contact_detail_set_alarm_title">알림설정</string>
    <string name="contact_detail_set_alarm">5분 후에 알림 설정하기</string>
    <string name="contact_item_recyclerview_delete">삭제</string>

    <!-- fragment_my_page.xml -->
    <string name="mypage_my_name">홍길동</string>
    <string name="mypage_my_phone_number">전화번호</string>
    <string name="mypage_please_edit">편집 버튼을 눌러 정보를 입력해 주세요.</string>
    <string name="mypage_email">이메일</string>
    <string name="mypage_memo">메모</string>

    <!-- fragment_edit_my_page.xml -->
    <string name="edit_mypage_btn">저장</string>
    <string name="edit_mypage_name">이름</string>

    <!-- activity_add_contact.xml -->
    <string name="add_contact_name">이름</string>
    <string name="add_contact_phoneNumber">전화번호</string>
    <string name="add_contact_email">이메일</string>
    <string name="add_contact_group">그룹</string>
    <string name="add_contact_save">저장</string>
    <string name="add_contact_cancel">취소</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>