<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="600dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/add_dialog_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/img_default_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_dialog_layout"
        />

    <android.widget.Button
        android:id="@+id/btn_user_info_change_profile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_button_add"
        android:elevation="15dp"
        android:layout_margin="8dp"
        android:shadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/add_dialog_img"
        app:layout_constraintEnd_toEndOf="@+id/add_dialog_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_dialog_layout"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/add_contact_name"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_dialog_img">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_dialog"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/call_dialog_layout"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/add_contact_phoneNumber"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_dialog_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_call_dialog"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:digits="0123456789-"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_dialog_layout"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/add_contact_email"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_dialog_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_dialog"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel_dialog"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_addcontact_cancel"
        android:text="@string/add_contact_cancel"
        android:textColor="@color/level3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_save_dialog"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_addcontact"
        android:text="@string/add_contact_save"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel_dialog" />


</androidx.constraintlayout.widget.ConstraintLayout>